# crosscoders

./: LICENSE  README.md  pyproject.toml
configs/: qwen_hh_norm_factors.json
crosscoders/: buffer.py  crosscoder.py  data_loader.py  train.py  train_new.py  utils.py  utils_new.py
crosscoders/configs/: example.json  qwen_hh_config.yaml
